--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.collinospeedshop.ar/?gad_source=1&gclid=Cj0KCQjwhr6_BhD4ARIsAH1YdjAERNQTQUn7v_QiF5mKWganX1VIvQSy4GaSR-UHgPuyV10FHjxSuwUaAooqEALw_wcB" />
+    <meta http-equiv="refresh" content="0; url=https://collino.ar/" />
     <script>
       window.location.href = "https://www.collinospeedshop.ar/?gad_source=1&gclid=Cj0KCQjwhr6_BhD4ARIsAH1YdjAERNQTQUn7v_QiF5mKWganX1VIvQSy4GaSR-UHgPuyV10FHjxSuwUaAooqEALw_wcB";
     </script>
     <title>Redireccionando...</title>
   </head>
   <body>
-    <p>Redireccionando... Si no ocurre automáticamente, hacé clic <a href="https://www.collinospeedshop.ar/?gad_source=1&gclid=Cj0KCQjwhr6_BhD4ARIsAH1YdjAERNQTQUn7v_QiF5mKWganX1VIvQSy4GaSR-UHgPuyV10FHjxSuwUaAooqEALw_wcB">aquí</a>.</p>
+    <p>Redireccionando... Si no ocurre automáticamente, hacé clic <a href="https://collino.ar/">aquí</a>.</p>
   </body>
 </html>
