--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="refresh" content="0; url=https://collino.ar/" />
     <script>
-      window.location.href = "https://www.collinospeedshop.ar/?gad_source=1&gclid=Cj0KCQjwhr6_BhD4ARIsAH1YdjAERNQTQUn7v_QiF5mKWganX1VIvQSy4GaSR-UHgPuyV10FHjxSuwUaAooqEALw_wcB";
+      window.location.href = "https://collino.ar/";
     </script>
     <title>Redireccionando...</title>
   </head>
